JSW Devsb/src/objects/Market_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Information JSW</relationshipLabel>
        <relationshipName>Market_Information_JSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Partner</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Market Information JSW</relationshipLabel>
        <relationshipName>Market_Information_JSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Details of Competitor Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>Territory__r.Districts__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influencer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencer</label>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipLabel>Market Information JSW</relationshipLabel>
        <relationshipName>Market_Information_JSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JSW_Average_Monthly_Volume__c</fullName>
        <label>JSW Average Monthly Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSW_BP_Max__c</fullName>
        <label>JSW BP Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSW_BP_Min__c</fullName>
        <label>Billing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSW_RSP_Max__c</fullName>
        <label>JSW RSP Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSW_RSP_Min__c</fullName>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSW_WSP_Max__c</fullName>
        <label>JSW WSP Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSW_WSP_Min__c</fullName>
        <label>Wholesale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Market Information JSW</relationshipLabel>
        <relationshipName>Market_Information_JSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Market Information JSW</relationshipLabel>
        <relationshipName>Market_Information_JSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_p__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite cement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Sites</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Market Information JSW</relationshipLabel>
        <relationshipName>Market_Information_JSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Market Information JSW</relationshipLabel>
        <relationshipName>Market_Information_JSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Market Information</relationshipLabel>
        <relationshipName>Market_Information_JSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Market Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account__c</columns>
        <columns>District__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{000000}</displayFormat>
        <label>Market Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Information JSW</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>